--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -8,8 +8,6 @@
     margin: 0;
 }
 
-
-
 .contact-form ::placeholder {
     color: #fff; 
     opacity: 0.8; 
@@ -56,11 +54,11 @@
     width: 100%;
     border: 0;
     background: #155e85;
-    height: 50px;
-    font-size: 20px;
+    max-height: 200px;
+    font-size: 18px;
     color: #fff;
     padding: 20px;
-    min-height: 150px;
+    min-height: 100px;
     box-sizing: border-box;
 }
 
