--- a/src/components/Layout/index.css
+++ b/src/components/Layout/index.css
@@ -4,23 +4,9 @@
   position: absolute;
 }
 
-.top-tags {
-  bottom: auto;
-  top: 35px;
-}
-
-.tags {
-  color: #ffd700;
-  opacity: 0.6;
-  position: absolute;
-  bottom: 0;
-  left: 120px;
-  font-size: 18px;
-  font-family: 'La Belle Aurore';
-}
-
-.bottom-tag-html {
-  margin-left: -20px;
+.sidebar {
+  display: flex;
+  min-height: 100vh;
 }
 
 .container {
@@ -94,22 +80,3 @@
   animation: pulse 1s;
 }
 
-.about-page p:nth-of-type(1),
-.contact-page p:nth-of-type(1) {
-  animation-delay: 1.1s;
-}
-
-.about-page p:nth-of-type(2),
-.contact-page p:nth-of-type(2) {
-  animation-delay: 1.2s;
-}
-
-.about-page p:nth-of-type(3),
-.contact-page p:nth-of-type(3) {
-  animation-delay: 1.3s;
-}
-
-.about-page .text-animate-hover:hover,
-.contact-page .text-animate-hover:hover {
-  color: #fff;
-}
